--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact | Naysella Ramadhani</title>
 
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -19,6 +20,7 @@
     }
     .card {
       border: none;
+      border-radius: 15px;
     }
   </style>
 </head>
@@ -43,9 +45,11 @@
 <!-- CONTACT CONTENT -->
 <div class="container my-5">
   <div class="row">
+
+    <!-- CONTACT FORM -->
     <div class="col-md-6 mb-4">
       <div class="card shadow p-4">
-        <h4 class="text-silver">Contact Form</h4>
+        <h4 class="text-silver mb-3">Contact Form</h4>
         <form>
           <div class="mb-3">
             <label class="form-label">Nama</label>
@@ -57,28 +61,61 @@
           </div>
           <div class="mb-3">
             <label class="form-label">Pesan</label>
-            <textarea class="form-control" rows="4"></textarea>
+            <textarea class="form-control" rows="4" placeholder="Tulis pesan"></textarea>
           </div>
-          <button class="btn btn-dark">Kirim</button>
+          <button type="submit" class="btn btn-dark">Kirim</button>
         </form>
       </div>
     </div>
 
+    <!-- SOCIAL MEDIA + WAKTU -->
     <div class="col-md-6 mb-4">
       <div class="card shadow p-4">
-        <h4 class="text-silver">Social Media</h4>
+        <h4 class="text-silver mb-3">Social Media</h4>
         <p><b>Instagram:</b> @taylorswift</p>
         <p><b>Twitter:</b> @taylorswift13</p>
         <p><b>Website:</b> www.taylorswift.com</p>
+
+        <hr>
+
+        <p class="mb-1"><b>Waktu Saat Ini:</b></p>
+        <p id="waktu" class="fw-semibold text-primary"></p>
       </div>
     </div>
+
   </div>
 </div>
 
+<!-- FOOTER -->
 <footer class="bg-silver text-white text-center p-3">
-  ©️ Naysella Ramadhani | 01SIFP005 | 251011700288
+  © Naysella Ramadhani | 01SIFP005 | 251011700288
 </footer>
 
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- JavaScript Penentuan Waktu -->
+<script>
+  function updateWaktu() {
+    const waktuSekarang = new Date();
+
+    const options = {
+      weekday: 'long',
+      year: 'numeric',
+      month: 'long',
+      day: 'numeric',
+      hour: '2-digit',
+      minute: '2-digit',
+      second: '2-digit'
+    };
+
+    document.getElementById("waktu").innerHTML =
+      waktuSekarang.toLocaleDateString('id-ID', options);
+  }
+
+  setInterval(updateWaktu, 1000);
+  updateWaktu();
+</script>
+
 </body>
 </html>
